cmake_minimum_required(VERSION 3.22)
project(CHIP-8)
enable_language(CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(fmt CONFIG REQUIRED)
find_package(SFML 2.5.1 COMPONENTS system graphics audio network REQUIRED)
include_directories(include/)
add_library(chip src/chip.cpp)
target_link_libraries(chip sfml-graphics sfml-window sfml-audio fmt::fmt)
add_executable(main src/main.cpp)
target_link_libraries(main PRIVATE fmt::fmt sfml-audio sfml-graphics sfml-network sfml-system chip)